@@ -1766,15 +1766,19 @@ GEN     embednorm_T2(GEN x, long r1);
 GEN     embed_norm(GEN x, long r1);
 void    check_ZKmodule(GEN x, const char *s);
 void    checkbid(GEN bid);
+GEN     checkbid_i(GEN bid);
 GEN     checkbnf(GEN bnf);
+GEN     checkbnf_i(GEN bnf);
 void    checkbnr(GEN bnr);
 void    checkbnrgen(GEN bnr);
 void    checkabgrp(GEN v);
 void    checksqmat(GEN x, long N);
 GEN     checknf(GEN nf);
+GEN     checknf_i(GEN nf);
 GEN     checknfelt_mod(GEN nf, GEN x, const char *s);
 void    checkprid(GEN bid);
 void    checkrnf(GEN rnf);
+int     checkrnf_i(GEN rnf);
 GEN     factoredpolred(GEN x, GEN fa);
 GEN     factoredpolred2(GEN x, GEN fa);
 GEN     galoisapply(GEN nf, GEN aut, GEN x);
