@@ -171,11 +171,6 @@ GEN    coltoalg(GEN nf,GEN x);
 GEN    archstar_full_rk(GEN x, GEN bas, GEN v, GEN gen);
 GEN    check_and_build_cycgen(GEN bnf);
 long   check_LIMC(long LIMC, long LIMCMAX);
-int    checkal_i(GEN x);
-GEN    checkbid_i(GEN bid);
-GEN    checkbnf_i(GEN bnf);
-GEN    checknf_i(GEN nf);
-int    checkrnf_i(GEN rnf);
 GEN    pow_ei_mod_p(GEN nf, long I, GEN n, GEN p);
 GEN    galoisbig(GEN x, long prec);
 GEN    get_arch_real(GEN nf,GEN x,GEN *emb,long prec);
